crates/reinhardt-core/macros/tests/ui/path/fail/unmatched_closing_brace.stderr
error: Unexpected closing brace. No matching opening brace found.
 --> tests/ui/path/fail/unmatched_closing_brace.rs:6:22
  |
6 |     let pattern = path!("polls/id}/");
  |                         ^^^^^^^^^^^^
